// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Divider Flex Item Horizontal 1`] = `
<div
  class="flex flex-col"
>
  <hr
    class="h-0 border-0 border-b"
  />
</div>
`;

exports[`Storyshots Divider Flex Item Vertical 1`] = `
<div
  class="flex"
  style="height: 320px;"
>
  <hr
    class="h-auto self-stretch border-0 border-r"
  />
</div>
`;

exports[`Storyshots Divider Orientation Horizontal 1`] = `
<hr
  class="h-0 border-0 border-b"
/>
`;

exports[`Storyshots Divider Orientation Vertical 1`] = `
<div
  style="height: 320px;"
>
  <hr
    class="h-full w-0 border-0 border-r"
  />
</div>
`;
